--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "aurebesh";
-  src: url("./assets/aurebesh.otf");
+  src: url("./assets/aurebesh.woff2");
 }
 
 @font-face {
