--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,10 @@ body {
   color: var(--sw-blue);
   background-color: #000000;
   background-image: url('./assets/starfield.jpg');
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  /* background-size: cover; */
   text-align: center;
 }
 
