--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,6 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  /* background-size: cover; */
   text-align: center;
 }
 
@@ -46,6 +45,6 @@ p {
 }
 
 @media only screen and (min-width: 768px) {
-  p { margin-bottom: 1rem; }
+  p { margin-bottom: 1rem; height: 1rem; }
   li { height: 2rem; }
 }
