--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,6 @@ p {
 }
 
 @media only screen and (min-width: 768px) {
-  p { margin-bottom: 1rem; height: 1rem; }
+  p { margin-bottom: 1rem; height: 1.1rem; line-height: 1rem; overflow: hidden; }
   li { height: 2rem; }
 }
