--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   --sw-dust: #a7a3a2;
   --sw-blue: #2a8dce;
   --sw-space: #02020e;
+  --sw-gray: #555555;
 
   margin: 0;
   padding: 0;
@@ -46,5 +47,5 @@ p {
 
 @media only screen and (min-width: 768px) {
   p { margin-bottom: 1rem; height: 1.1rem; line-height: 1rem; overflow: hidden; }
-  li { height: 2rem; }
+  li { min-height: 2rem; }
 }
